--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,26 +6,27 @@ img {
 width: 100%
 }
 
-.card-picture {
-  height: 300px;
-  width: auto;
-  border-radius: 50%;
-}
 
-<<<<<<< HEAD
 .player-cards {
-  height: 80%;
+  height: 85%;
 }
 
 .player-card {
-  height: 60%
+  height: 90%
+}
+
+.card-picture {
+  height: 70%;
+  width: 100%;
+  border-radius: 50%;
 }
 
 .game-container {
   background-color: blue;
+  height: 900px;
+  }
 
-  height: 500px;
-}
+
 
 body {
   background-color: #e4efe7;
@@ -33,5 +34,5 @@ body {
 }
 
 .attack-button {
-  
+
 }
